Closed Bug 490275 Opened 16 years ago Closed 16 years ago

Memory leak in xpcom/glue/standalone/nsGlueLinkingWin.cpp

Categories

(Core :: XPCOM, defect)

x86
Windows XP
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla1.9.2a1

People

(Reporter: hiro, Assigned: hiro)

Details

(Keywords: memory-leak, Whiteboard: [needs 1.9.1 landing: needs branch patch and approval])

Attachments

(1 file)

Memory leak in xpcom/glue/standalone/nsGlueLinkingWin.cpp
Attachment #374724 - Flags: review?(benjamin)
OS: Linux → Windows XP
Attachment #374724 - Flags: review?(benjamin) → review+
Assignee: nobody → ikezoe
Keywords: checkin-needed
Status: NEW → ASSIGNED
Attachment #374724 - Attachment description: A patch → A patch [Checkin: Comment 1]
Status: ASSIGNED → RESOLVED
Closed: 16 years ago
Flags: in-testsuite-
Keywords: checkin-needed
Resolution: --- → FIXED
Whiteboard: [needs 1.9.1 landing: needs branch patch and approval]
Target Milestone: --- → mozilla1.9.2a1
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: