Bug 490275 - Memory leak in xpcom/glue/standalone/nsGlueLinkingWin.cpp; r=benjamin